# lang-interpreter-by-ai

./: .gitignore  CMakeLists.txt  LANGUAGE.md  Makefile  README.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  interpreter
src/: ast.c  ast.h  builtins.c  builtins.h  interpreter.c  interpreter.h  lexer.c  lexer.h  main.c  module.c  module.h  parser.c  parser.h  value.c  value.h
tests/: test_basic.txt  test_dcolon.txt  test_functions.txt  test_patterns.txt
